--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Quicksand|Roboto+Mono|Source+Code+Pro|Ubuntu" rel="stylesheet">
+
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
